# advent_of_code

./: .clang-tidy  .gitignore  README.md
2017/day_1/: part2.py
2017/day_11/: test2
2017/day_13/: solution.py
2017/day_19/: solution.py
2017/day_20/: solution.py
2017/day_21/: solution.py
2017/day_3/: part1.py
2017/day_4/: part1.py
2017/day_8/: part1.py
2017/day_9/: part1.py  test  test2
2018/day_01/: part_2.py  solution.py  test_solution.py
2018/day_02/: test_solution.py
2018/day_03/: part_1.py  solution.py
2018/day_04/: part_2.py  sorted_log.txt  test_solution.py
2018/day_05/: part_1.py  part_2.py  solution.py  test_solution.py
2018/day_06/: part_1.py  part_2.py  solution.py  test_solution.py
2018/day_07/: part_1.py  solution.py  test_solution.py
2018/day_08/: part_1.py
2018/day_09/: solution.py
2018/day_10/: part_1.py  solution.py  sparse.py  test_solution.py
2018/day_11/: part_1.py  solution.py  test_solution.py
2018/day_12/: part_1.py
2018/day_13/: part_1.py  part_2.py  solution.py
2018/day_14/: part_1.py  part_2.py
2018/day_15/: part_1.py  test_solution.py
2018/day_16/: part_1.py
2020/: CMakeLists.txt
2020/day_01/: example  main.cpp
2021/: CMakeLists.txt  main
2021/day_01/: main.cpp
2021/day_02/: main.cpp
2021/day_03/: main.cpp
2021/day_04/: main.cpp
2021/lib/: functions.cpp
2023/: .editorconfig  CMakeLists.txt
2023/day_01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp
2023/day_02/: CMakeLists.txt  day.cpp  day.h
2023/day_03/: CMakeLists.txt  day.cpp  day.h  main.cpp
2023/lib/: CMakeLists.txt  functions.cpp  functions.h
day_1/: day1.py  part1.py
day_10/: part1.py
day_11/: part1.py
day_12/: solution.py
day_14/: knothash.py  part1.example.pickle  result.txt  solution.py
day_15/: solution.py
day_16/: solution.py
day_17/: solution.py
day_18/: solution.py
day_2/: part1.py
day_3/: part1.py
day_5/: part1.py
day_6/: part1.py
day_7/: part1.py
(+73 files in other folders)
